--- a/index.html
+++ b/index.html
@@ -1,12 +1,39 @@
-<!DOCTYPE html>
+<!DOCTYPE <!DOCTYPE html>
 <html>
+<head>
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <title>Destino </title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+    crossorigin="anonymous">
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+    crossorigin="anonymous"></script>
+
+  <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
+    crossorigin="anonymous"></script>
+</head>
 <body>
-<h1>Destino App</h1>
-<p>Hi! </p>
-<script
-  src="https://code.jquery.com/jquery-3.3.1.js"
-  integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
-  crossorigin="anonymous"></script>
-<script src="./index.js"></script>
+ 
+<div class="jumbotron jumbotron-fluid">
+  <div class="container">
+    <h1 class="display-4">Destino App</h1>
+    <p class="lead">Places near you.</p>
+  </div>
+</div>
+
+<div class="container">
+  <div class="row">
+    <div class="col">
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fuga dolorem asperiores unde minus non.</p>
+    </div>
+    <div class="col">
+<p>Architecto numquam porro, asperiores minus itaque, id tempore eius nostrum esse vero ipsam facere deserunt molestiae?</p>
+    </div>
+  </div>
+  </div>
+
+  <script src="./index.js"></script>  
 </body>
 </html>
